--- a/src/i18n/json/ko.json
+++ b/src/i18n/json/ko.json
@@ -10,6 +10,8 @@
         "facebook": "Facebook",
         "noAccount": "계정이 없으신가요?",
         "register": "가입하기",
+        "emailSent": "이메일 성공적으로 전송됨!",
+        "emailFail": "인증 이메일 전송 실패",
         "error": {
             "title": "오류",
             "message": "잘못된 이메일이나 비밀번호",
@@ -230,7 +232,10 @@
             "name": "이름",
             "phoneNumber": "전화 번호",
             "submit": "제출",
-            "selectLanguage": "언어 선택"
+            "selectLanguage": "언어 선택",
+            "picture": "아바타 선택",
+            "noChange": "변경 사항 없음",
+            "updatedSuccess": "정보가 성공적으로 업데이트됨"
         }
     },
     "header": {
@@ -245,12 +250,32 @@
         "yes": "예",
         "no": "아니요",
         "toDo": "해야 할 일",
-        "done": "완료됨"
+        "done": "완료됨",
+        "uploadResult": "성공적으로 업로드됨"
     },
     "forgotPassword": {
         "title": "비밀번호를 잊으셨나요?\n",
         "placeholder": "이메일\n",
         "submit": "제출",
         "back": "뒤로"
+    },
+    "error": {
+        "profile": "프로필 로드 중 오류",
+        "mainmenu": "주 메뉴 로드 중 오류",
+        "mainmenuCalendar": "주 메뉴 캘린더 로드 중 오류",
+        "calendar": "캘린더 로드 중 오류",
+        "calendarDelete": "이벤트 삭제 중 오류",
+        "alertMissingToken": "오류: 토큰이 누락됨.",
+        "alertSystemError": "오류: 시스템 오류.",
+        "alertUserNotFound": "오류: 사용자를 찾을 수 없음.",
+        "uploadResult": "업로드 중 오류",
+        "result": "결과 로드 중 오류",
+        "question": "질문 로드 중 오류",
+        "process": "프로세스 로드 중 오류",
+        "editInfoFail": "업데이트 실패",
+        "calendarProcess": "프로세스 로드 중 오류",
+        "calendarStep": "스텝 로드 중 오류",
+        "calendarAdd": "이벤트 추가 중 오류",
+        "calendarEdit": "이벤트 편집 중 오류"
     }
 }
