--- a/src/i18n/json/de.json
+++ b/src/i18n/json/de.json
@@ -108,6 +108,7 @@
             "edit": {
                 "title": "Ereignis bearbeiten/löschen",
                 "button": "Bearbeiten",
+                "updated": "Ereignis erfolgreich aktualisiert",
                 "ok": "OK"
             },
             "delete": {
