--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -108,6 +108,7 @@
             "edit": {
                 "title": "Edit / Delete event",
                 "button": "Edit",
+                "updated": "Event updated successfully",
                 "ok": "OK"
 
             },
