--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -108,6 +108,7 @@
             "edit": {
                 "title": "Modifier / Supprimer un événement",
                 "button": "Modifier",
+                "updated": "Événement modifié avec succès",
                 "ok": "OK"
             },
             "delete": {
