--- a/src/i18n/json/id.json
+++ b/src/i18n/json/id.json
@@ -108,6 +108,7 @@
             "edit": {
                 "title": "Edit/Hapus acara",
                 "button": "Edit",
+                "updated": "Acara berhasil diperbarui",
                 "ok": "OK"
             },
             "delete": {
