--- a/src/i18n/json/ko.json
+++ b/src/i18n/json/ko.json
@@ -108,6 +108,7 @@
             "edit": {
                 "title": "이벤트 수정 / 삭제",
                 "button": "수정",
+                "updated": "이벤트가 성공적으로 수정되었습니다",
                 "ok": "확인"
             },
             "delete": {
