[FIX] settings light mode and main menu component

--- a/src/i18n/json/de.json
+++ b/src/i18n/json/de.json
@@ -152,6 +152,7 @@
     "settings": {
         "pageTitle": "Einstellungen",
         "darkMode": "Dunkelmodus",
+        "lightMode": "Lichtmodus",
         "version": "Version",
         "disconnect": "Abmelden",
         "deleteAccount": "Konto löschen",
