--- a/src/i18n/json/es.json
+++ b/src/i18n/json/es.json
@@ -152,6 +152,7 @@
     "settings": {
         "pageTitle": "Configuración",
         "darkMode": "Modo oscuro",
+        "lightMode": "modo de luz",
         "version": "Versión",
         "disconnect": "Desconectar",
         "deleteAccount": "Eliminar cuenta",
