--- a/src/i18n/json/id.json
+++ b/src/i18n/json/id.json
@@ -152,6 +152,7 @@
     "settings": {
         "pageTitle": "Pengaturan",
         "darkMode": "Mode Gelap",
+        "lightMode": "Mode cahaya",
         "version": "Versi",
         "disconnect": "Keluar",
         "deleteAccount": "Hapus Akun",
