--- a/src/i18n/json/es.json
+++ b/src/i18n/json/es.json
@@ -231,6 +231,7 @@
             "title" : "Editar tus Informaciones",
             "address": "Dirección",
             "age": "Edad",
+            "firstname": "Nombre",
             "name": "Apellido",
             "phoneNumber": "Número de Teléfono",
             "submit": "Enviar",
@@ -253,7 +254,8 @@
         "no": "No",
         "toDo": "Por Hacer",
         "done": "Hecho",
-        "uploadResult": "Carga exitosa"
+        "uploadResult": "Carga exitosa",
+        "chooseProcess":"Elige un proceso"
     },
     "forgotPassword": {
         "title": "¿Olvidaste tu Contraseña?\n",
