[FIX] minor fix

--- a/src/i18n/json/de.json
+++ b/src/i18n/json/de.json
@@ -130,7 +130,7 @@
             "message": "Etwas ist schief gelaufen, bitte versuchen Sie es später erneut",
             "button": "OK"
         },
-        "noEvent": "keine Veranstaltung geplant"
+        "noEvent": "Keine Veranstaltung geplant"
     },
     "processidea": {
         "pagetitle": "Neue Prozessidee",
