--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -130,7 +130,7 @@
             "message": "Une erreur est survenue, veuillez réessayer plus tard",
             "button": "OK"
         },
-        "noEvent": "pas d'événement plannifié"
+        "noEvent": "Pas d'événement plannifié"
     },
     "processidea": {
         "pagetitle": "Nouvelle idée de procédure",
