--- a/src/i18n/json/de.json
+++ b/src/i18n/json/de.json
@@ -128,6 +128,7 @@
         "error": {
             "title": "Fehler",
             "message": "Etwas ist schief gelaufen, bitte versuchen Sie es später erneut",
+            "processfirst": "Bitte erstellen Sie zunächst einen Prozess",
             "button": "OK"
         },
         "noEvent": "Keine Veranstaltung geplant"
