--- a/src/i18n/json/ko.json
+++ b/src/i18n/json/ko.json
@@ -128,6 +128,7 @@
         "error": {
             "title": "오류",
             "message": "문제가 발생했습니다. 나중에 다시 시도해주세요",
+            "processfirst": "먼저 프로세스를 생성해 주세요.",
             "button": "확인"
         },
         "noEvent": "예정된 이벤트 없음"
